# Imaging_FCS

./: .gitignore  CHANGELOG.md  COMPILATION_NOTES.md  README.md  compilation-notes.txt  pom.xml
.github/workflows/: build.yml  build_and_release.yml  java_maven_ci.yml  release.yml
doc/: doc.md
doc/media/: image10.wmf  image100.wmf  image101.wmf  image102.wmf  image105.tiff  image106.tiff  image107.tiff  image108.tiff  image21.wmf  image48.wmf  image49.wmf  image50.wmf  image51.wmf  image52.wmf  image53.wmf  image54.wmf  image55.wmf  image56.wmf  image57.wmf  image58.wmf  image59.wmf  image60.wmf  image61.wmf  image63.wmf  image64.wmf  image65.wmf  image66.wmf  image67.wmf  image68.wmf  image69.wmf  image70.wmf  image71.wmf  image72.wmf  image73.wmf  image74.wmf  image75.wmf  image76.wmf  image77.wmf  image78.wmf  image79.wmf  (+20 more)
java/: Test.java  plugins.config
java/imfcs/: Imaging_FCS_1_62.java  TimerFit.java
java/version/: VERSION.java
src/main/cpp/: .clang-format  CMakeLists.txt
src/main/cpp/cameras/: CMakeLists.txt  TimeKeeper.cpp  TimeKeeper.h
src/main/cpp/cameras/dcam/: CMakeLists.txt  ImageClsSDK4.cpp  ImageClsSDK4.h  OrcaJob.h  Source.cpp  Stoppable.cpp  common.cpp  common.h
src/main/cpp/cameras/dcam/dependencies/include/: dcamapi4.h  fiji_plugin_imaging_fcs_directCameraReadout_hamadcamsdk4_Hamamatsu_DCAM_SDK4.h
src/main/cpp/cameras/pvcam/: CMakeLists.txt  Common.cpp  ImageClsPVCam.cpp  ImageClsPVCam.h  Source.cpp  version.h
src/main/cpp/cameras/pvcam/dependencies/include/: directCameraReadout_pvcamsdk_Photometrics_PVCAM_SDK.h  fiji_plugin_imaging_fcs_directCameraReadout_pvcamsdk_Photometrics_PVCAM_SDK.h
src/main/cpp/cameras/sdk2/: CMakeLists.txt  ImageClsSDK2.cpp  ImageClsSDK2.h  sourcesdk2.cpp
src/main/cpp/cameras/sdk2/dependencies/include/: ATMCD32D.H  fiji_plugin_imaging_fcs_directCameraReadout_andorsdk2v3_AndorSDK2v3.h
src/main/cpp/cameras/sdk3/: CMakeLists.txt  ImageClsSDK3.cpp  ImageClsSDK3.h  sourcesdk3v2.cpp
src/main/cpp/cameras/sdk3/dependencies/include/: atcore.h  atutility.h  fiji_plugin_imaging_fcs_directCameraReadout_andorsdk3v2_AndorSDK3v2.h
src/main/cpp/dcam/: CMakeLists.txt  OrcaJob.cpp  Source.cpp  Stoppable.h  TimeKeeper.cpp  TimeKeeper.h  common.cpp  console4.h
src/main/cpp/dcam/dependencies/include/: dcamprop.h  directCameraReadout_hamadcamsdk4_Hamamatsu_DCAM_SDK4.h
src/main/cpp/gpufit/: CMakeLists.txt  acf_input_params_wrapper.cpp  acf_input_params_wrapper.h  constants.h  cuda_fcs_kernels.cu  cuda_fcs_kernels.cuh  cuda_gaussjordan.cu  cuda_gaussjordan.cuh  cuda_kernels.cu  cuda_kernels.cuh  definitions.h  fiji_plugin_imaging_fcs_gpufitImFCS_GpufitImFCS.cu  fiji_plugin_imaging_fcs_gpufitImFCS_GpufitImFCS.h  fiji_plugin_imaging_fcs_gpufit_Gpufit.cu  fiji_plugin_imaging_fcs_gpufit_Gpufit.h  fiji_plugin_imaging_fcs_imfcs_gpu_GpuCorrelator.cu  fiji_plugin_imaging_fcs_imfcs_gpu_GpuCorrelator.h  fiji_plugin_imaging_fcs_imfcs_gpu_GpuParameters.cu  fiji_plugin_imaging_fcs_imfcs_gpu_GpuParameters.h  fiji_plugin_imaging_fcs_new_imfcs_gpu_GpuCorrelator.cu  fiji_plugin_imaging_fcs_new_imfcs_gpu_GpuCorrelator.h  fiji_plugin_imaging_fcs_new_imfcs_gpu_GpuParameters.cu  fiji_plugin_imaging_fcs_new_imfcs_gpu_GpuParameters.h  gpu_data.cu  gpu_data.cuh  gpufit.cpp  gpufit.h  gpufitImFCS_GpufitImFCS.cu  gpufitImFCS_GpufitImFCS.h  info.cpp  info.cu  info.h  interface.cpp  interface.h  java_array.h  lm_fit.cpp  lm_fit.h  lm_fit_cuda.cpp  lm_fit_cuda.cu
src/main/cpp/gpufit/cuda_utils/: cuda_device_ptr.h
src/main/cpp/gpufit/estimators/: estimators.cuh  lse.cuh  mle.cuh
src/main/cpp/gpufit/models/: acf_1d.cuh  acf_numerical3d.cuh  gauss_2d.cuh  linear_1d.cuh  models.cuh
src/main/cpp/gpufitOneFile/: CMakeLists.txt  agpufitjni.cu
src/main/cpp/pvcam/: CMakeLists.txt  Common.h  Source.cpp  TimeKeeper.cpp  TimeKeeper.h
src/main/cpp/pvcam/dependencies/include/: master.h  pvcam.h
src/main/cpp/sdk2/: CMakeLists.txt  ImageClsSDK2.h  sourcesdk2.cpp
src/main/cpp/sdk2/dependencies/include/: directCameraReadout_andorsdk2v3_AndorSDK2v3.h
src/main/cpp/sdk3/: CMakeLists.txt  ImageClsSDK3.h  TimeKeeper.cpp  sourcesdk3v2.cpp
src/main/cpp/sdk3/dependencies/include/: ATMCD32D.H  directCameraReadout_andorsdk3v2_AndorSDK3v2.h
src/main/java/fiji/plugin/imaging_fcs/directCameraReadout/: DirectCapture.java
src/main/java/fiji/plugin/imaging_fcs/directCameraReadout/andorsdk2v3/: AndorSDK2v3.java
src/main/java/fiji/plugin/imaging_fcs/directCameraReadout/andorsdk3v2/: AndorSDK3v2.java
src/main/java/fiji/plugin/imaging_fcs/directCameraReadout/control/: FrameCounter.java  FrameCounterX.java
src/main/java/fiji/plugin/imaging_fcs/directCameraReadout/fcs/: ImFCSCorrelator.java
src/main/java/fiji/plugin/imaging_fcs/directCameraReadout/gui/: DirectCapturePanel.java  JTESTPanelComponent.java  cameraConstant.java  parameterName.java
src/main/java/fiji/plugin/imaging_fcs/directCameraReadout/hamadcamsdk4/: Hamamatsu_DCAM_SDK4.java
src/main/java/fiji/plugin/imaging_fcs/directCameraReadout/iccs/: ICCS.java  TwoDGaussFunction.java
src/main/java/fiji/plugin/imaging_fcs/directCameraReadout/image/: DisplayImage.java
src/main/java/fiji/plugin/imaging_fcs/directCameraReadout/pvcamsdk/: Photometrics_PVCAM_SDK.java
src/main/java/fiji/plugin/imaging_fcs/directCameraReadout/system/: SystemInfo.java
src/main/java/fiji/plugin/imaging_fcs/directCameraReadout/updater/: Updater.java
src/main/java/fiji/plugin/imaging_fcs/directCameraReadout/util/: TimeTaggedStorage.java  (+1 more)
src/main/java/fiji/plugin/imaging_fcs/gpufit/: CudaVersion.java  Estimator.java  FitModel.java  FitResult.java  FitState.java  GpuFitModel.java  Gpufit.java  GpufitUtils.java  Model.java
src/main/java/fiji/plugin/imaging_fcs/gpufitImFCS/: GpufitImFCS.java
src/main/java/fiji/plugin/imaging_fcs/imfcs/: ImagingFCS.java  Imaging_FCS.java  TimerFit.java
src/main/java/fiji/plugin/imaging_fcs/new_imfcs/: ImagingFCS.java  UIUtils.java
src/main/java/fiji/plugin/imaging_fcs/version/: VERSION.java
src/main/resources/: plugins.config
src/test/java/fiji/plugin/imaging_fcs/: Test.java
(+238 files in other folders)
